fix header overlapped by testimonials

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -11,7 +11,7 @@ body {
     position: fixed;
     top: 0;
     background-color: $primary_color_dark;
-    z-index: 100;
+    z-index: 1000;
     width: 100%;
 }
 
